@@ -1,5 +1,6 @@
 v3.3.3 (2020.09.XX)
   - Update SQLite database engine to version 3.33.0
+  - Add "Report actual start and end times for upcoming timers" Interface option
 
 v3.3.2 (2020.07.15)
   - Update SQLite database engine to version 3.32.3
